--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 RewriteEngine on
 RewriteBase /
 
+RewriteCond %{REQUEST_URI} !\.(css|js|jpg|gif|png)$
 RewriteCond %(REQUEST_FILENAME) !-f
 RewriteCond %(REQUEST_FILENAME) !-d
 
